[tool.poetry]
name = "real-time-voice-cloning"
version = "0.1.0"
description = ""
authors = ["DeepLearning VM <google-dl-platform@googlegroups.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow-gpu = ">=1.10.0,<=1.14.0"
umap-learn = "^0.3.10"
visdom = "^0.1.8"
webrtcvad = "^2.0.10"
librosa = ">=0.5.1"
matplotlib = ">=2.0.2"
numpy = ">=1.14.0"
scipy = ">=1.0.0"
tqdm = "^4.41.1"
sounddevice = "^0.3.14"
Unidecode = "^1.1.1"
inflect = "^4.0.0"
multiprocess = "^0.70.9"
numba = "^0.47.0"
pydub = "^0.23.1"
gunicorn = "^20.0.4"
flask = "^1.1.1"
torch = "1.2"
aeneas = "^1.7.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
